2012-01-04  Richard Guenther  <rguenther@suse.de>

	PR tree-optimization/49651
	* tree-ssa-structalias.c (type_can_have_subvars): New function.
	(var_can_have_subvars): Use it.
	(get_constraint_for_1): Only consider subfields if there
	can be any.

2012-01-03  Sandra Loosemore  <sandra@codesourcery.com>

	Backport from mainline:
	2012-01-02  Sandra Loosemore  <sandra@codesourcery.com>

	* doc/invoke.texi (-flto and related options): Copy-edit.

2012-01-03  Richard Guenther  <rguenther@suse.de>

	Backport from mainline
	2011-11-10  Richard Guenther  <rguenther@suse.de>

	PR tree-optimization/51042
	* tree-ssa-pre.c (phi_translate_1): Avoid recursing on
	self-referential expressions.  Refactor code to avoid duplication.

2012-01-03  Richard Guenther  <rguenther@suse.de>

	PR tree-optimization/51070
	* tree-loop-distribution.c (generate_builtin): Do not replace
	the loop with a builtin if the partition contains statements which
	results are used outside of the loop.
	(stmt_has_scalar_dependences_outside_loop): Properly handle calls.

2011-12-30  Michael Meissner  <meissner@linux.vnet.ibm.com>

	Backport from the mainline
	2011-12-30  Michael Meissner  <meissner@linux.vnet.ibm.com>

	* config/rs6000/rs6000.c (rs6000_inner_target_options): Fix thinko
	in setting options via target #pragma or attribute.

2011-12-28  Michael Meissner  <meissner@linux.vnet.ibm.com>

	Backport from mainline
	2011-12-28  Michael Meissner  <meissner@linux.vnet.ibm.com>

	PR target/51623
	* config/rs6000/rs6000.c (rs6000_assemble_integer): Don't call
	unlikely_text_section_p.  Instead check for being in a code
	section.

2011-12-23  Richard Guenther  <rguenther@suse.de>

	PR rtl-optimization/50396
	* simplify-rtx.c (simplify_binary_operation_1): Properly
	guard code that only works for integers.

2011-12-22  Doug Kwan  <dougkwan@google.com>

	Backport from mainline
	2011-03-23  Julian Brown  <julian@codesourcery.com>

	* expr.c (expand_expr_real_1): Only use BLKmode for volatile